replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/16_wait_var_inferred.su
// Expected error: SUT0131 — `var x = wait;` is not allowed.
// `wait` carries no type, so an inferred `var` declaration has
// nothing to default the zero-of-type emission to. Use a concrete
// type on the LHS.

function void Bad() {
    var x = wait;
    x = 5;
}
